* Renamed media-admin.js to mediadmin.js, to avoid possible confusion in filenames. There was no harm done, but as a general rule of thumb, we should avoid hyphens in JS/CSS filenames when one of the filename's elements is a common one, like... media, or admin. (Aeva-Gallery2.php, Aeva-ModCP.php, ManageMedia.php) ! Fixed a language string possibly not being loaded in the album manager. (Aeva-Gallery2.php) ! One of the PNG8 files didn't correctly set the alpha bit. (arrow_inout.png) ! admin_toggle() was broken due to the use of .has() instead of .is() (mediadmin.js) ! admin_toggle() only takes one parameter. (ManageMedia.template.php, Media.template.php, mediadmin.js) ! Media pruning area was broken. (ManageMedia2.php) * Moved admin_prune_toggle() to the actual media pruning admin page -- it's only used there, and it's short. (ManageMedia.template.php) * admin_toggle() will now open its flower only after its related icon has finished loading. Maybe better, maybe worse. (mediadmin.js) * Alignazi. (Media.template.php, media.css)

--- a/Themes/default/styles/media.css
+++ b/Themes/default/styles/media.css
@@ -202,8 +202,12 @@ iframe.aext
 	img
 		vertical-align: -2px
 
-.text_margins a
-	margin: 0 2px
+.album_moderation
+	white-space: nowrap
+	img
+		vertical-align: -2px
+	a
+		margin: 0 2px
 
 .mg_subtext, .mg_desc, .mg_hidden
 	color: #777
